# modular

./: .bazelignore  .bazelrc  .bazelversion  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  FIX_ISSUE_5733.md  FIX_ISSUE_6630.md  MODULE.bazel  MXFP4_H100_IMPLEMENTATION_PLAN.md  PR_DESCRIPTION.md  PR_DESCRIPTION_5733.md  README.md  [BUG] 1.0 _ 0.0 interpreted as nan rather than inf. · Issue #5733 · modular_modular.html  [BUG] hard keywords should not be allowed as function names · Issue #6630 · modular_modular.html  issue_5733_reproduction.mojo  issue_6630_reproduction.mojo  mxfp4_comparison_report.md  pixi.toml  pyproject.toml  repr_followup_changes.patch
bazel/: BUILD.bazel  api.bzl  common.MODULE.bazel  config.bzl  first.cpp  modular_wheel_repository.bzl  mojo.MODULE.bazel  mojo_aliases.bzl  rebuild_wheel.bzl  second.cpp
bazel/internal/: BUILD.bazel  bazel-debug.sh  cc_transition.bzl  common.bazelrc  mef.bzl  modular_genrule.bzl  mojo-filecheck-test.sh  mojo_doc.bzl  mojo_library.bzl  mojo_shared_library.bzl  run_mojo.py
bazel/internal/cc-toolchain/: BUILD.bazel  collect-cc-coverage.sh
bazel/internal/cc-toolchain/args/: BUILD.bazel
bazel/internal/cc-toolchain/args/interface-libraries/: BUILD.bazel  builder.sh
bazel/internal/cc-toolchain/tools/: BUILD.bazel  linker-driver.sh  multi-platform-clang++.sh  multi-platform-clang.sh  tools.bzl
bazel/lint/: BUILD.bazel  check_licenses.mojo  format-fast-wrapper.sh  format-wrapper.sh  markdownlint-wrapper.sh  mblack-wrapper.py  ruff-wrapper.sh  shellcheck-wrapper.sh
bazel/pip/pydeps/: import_dependency_compare.py  pydeps_test.bzl
bazel/pip/requirements/: pycross_lock_file.bzl  pyproject.toml  uv-lock.sh  uv-wrapper.sh
bazel/public-patches/: nixl_upstream.BUILD  opentelemetry.patch  rules_mojo_wheel_fetch.patch  xgrammar.BUILD
examples/process/: BUILD.bazel  my_script.mojo  process_example.mojo
max/examples/diffusion/: BUILD.bazel  all_wan_model_speed_metric.py  flux2_comparison.py  offline_generation.py  profiler.py  run_diffusers.py  simple_offline_generation.py  simple_offline_video_generation.py
max/kernels/benchmarks/autotune/: BUILD.bazel  README.md  init-kbench.sh  kbench.py  kbench_model.py  kprofile.py  sample.mojo  test.yaml  test_python.yaml  utils.py
max/kernels/benchmarks/autotune/data/: run.sh
max/kernels/benchmarks/autotune/demo/: gemm.yaml
max/kernels/benchmarks/autotune/tests/: test_crash.yaml  test_kbench.py  test_timeout.yaml
max/kernels/benchmarks/misc/blackwell_bench/: BUILD.bazel
max/kernels/benchmarks/misc/comparison/: BUILD.bazel  bench_allreduce_subgraph.yaml  bench_allreduce_subgraph_max.yaml  bench_blackwell_decode.py  bench_blackwell_mla_decode.py  bench_blackwell_prefill.py  bench_decode.yaml  bench_grouped_gemm.yaml  bench_mla_decode_sm100_deepseek_bf16.yaml  bench_mla_decode_sm100_deepseek_fp8.yaml  bench_mla_decode_sm100_kimi_bf16.yaml  bench_mla_decode_sm100_kimi_fp8.yaml  bench_prefill.yaml  setup_bench_env.py
max/kernels/src/graph_compiler/builtin_kernels/: BUILD.bazel  __init__.mojo  attention.mojo  conv.mojo  distributed.mojo  gather_scatter.mojo  kernels.mojo  kv_cache.mojo  linalg.mojo  logprobs.mojo  msa.mojo  nan_check.mojo  quantization.mojo  reductions.mojo  w4a16.mojo
max/kernels/src/graph_compiler/builtin_primitives/: BUILD.bazel  primitives.mojo
max/kernels/src/graph_compiler/extensibility/: BUILD.bazel  managed_tensor_slice.mojo
max/kernels/src/nvml/: BUILD.bazel  nvml.mojo
max/kernels/src/profiling_range/: BUILD.bazel  __init__.mojo  range.mojo
max/kernels/src/state_space/: BUILD.bazel  __init__.mojo  causal_conv1d.mojo  causal_conv1d_ops.mojo  mamba2_ssd_scan.mojo  rms_norm_fused_residual.mojo  rms_norm_fused_residual_ops.mojo  selective_scan.mojo  selective_scan_ops.mojo  varlen_causal_conv1d.mojo  varlen_causal_conv1d_ops.mojo  varlen_selective_scan.mojo  varlen_selective_scan_ops.mojo
max/kernels/src/state_space/nn/: BUILD.bazel  __init__.mojo
max/kernels/src/state_space/ops/: BUILD.bazel  __init__.mojo  causal_conv1d_ops.mojo  selective_scan_ops.mojo
max/kernels/test/gpu/fuzz/: .gitignore  BUILD.bazel  README.md  _fuzz.mojo  fuzz.py  fuzz_block_scaled_fp4.mojo  fuzz_block_scaled_mxfp8.mojo  fuzz_ep_combine.mojo  fuzz_fused_qk_rms_norm.mojo  fuzz_fused_qk_rope.mojo  fuzz_fused_qkv_index_matmul_mxfp8.mojo  fuzz_fused_qkv_matmul_mxfp8.mojo  fuzz_fused_rope_rmsnorm.mojo  fuzz_fused_swiglu_dispatch.mojo  fuzz_fused_swiglu_mxfp8.mojo  fuzz_grouped_matmul_mxfp8.mojo  (+20 more)
max/kernels/test/profiling/: BUILD.bazel  test_range_struct.mojo
max/kernels/test/state_space/: BUILD.bazel  test_causal_conv1d.mojo  test_causal_conv1d_channel_last.mojo  test_causal_conv1d_update.mojo  test_mamba_split_conv1d_scan_combined.mojo  test_rms_norm_fused_residual.mojo  test_selective_scan.mojo  test_ssd_combined.mojo  test_varlen_causal_conv1d.mojo  test_varlen_selective_scan.mojo
max/serve-rust/: BUILD.bazel  Cargo.toml
max/serve-rust/src/: config.rs  error.rs  kserve.rs  main.rs  metrics.rs  openai.rs  python_bridge.rs  types.rs  zmq_interface.rs
max/tests/tests/nn/: BUILD.bazel  test_selective_scan.py
mojo/python/test/: BUILD.bazel  test_entrypoints.py
mojo/stdlib/test/io/: BUILD.bazel  test_file.mojo  test_file_descriptor.mojo  test_write.mojo  test_write_to_stdout.mojo
mojo/stdlib/test/itertools/: BUILD.bazel  test_count.mojo  test_cycle.mojo  test_drop.mojo  test_drop_while.mojo  test_product.mojo  test_repeat.mojo  test_skip.mojo  test_take.mojo  test_take_while.mojo
mojo/stdlib/test/python/: BUILD.bazel  buffer_mojo_module.mojo  mapping_mojo_module.mojo  number_mojo_module.mojo  sequence_mojo_module.mojo  test_buffer.py  test_mapping.py  test_number.py  test_ownership.mojo  test_python_cpython.mojo  test_python_error_handling.mojo  test_python_exception.mojo  test_python_info.mojo  test_python_interop.mojo  test_python_module_create.mojo  test_python_object.mojo  test_python_to_mojo.mojo  test_sequence.py  test_type_protocol.py  test_version_specific.mojo  type_protocol_mojo_module.mojo
(+3696 files in other folders)
