"""Define the Mojo toolchain"""

PACKAGE_VERSION = "25.6.0.dev2025080705"

# NOTE: Used internally when pushing new releases
BASE_URL = "https://dl.modular.com/public/nightly/python"

MOJO_URL_OVERRIDE = None

mojo = use_extension("@rules_mojo//mojo:extensions.bzl", "mojo")
mojo.toolchain(
    url_override = MOJO_URL_OVERRIDE,
    use_prebuilt_packages = False,
    version = PACKAGE_VERSION,
)
use_repo(mojo, "mojo_toolchains")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

_PLATFORM_MAPPINGS = {
    "linux_aarch64": "manylinux_2_34_aarch64",
    "linux_x86_64": "manylinux_2_34_x86_64",
    "macos_arm64": "macosx_13_0_arm64",
    "": "any",
}

_WHEELS = [
    ("max", _PLATFORM_MAPPINGS.keys()),
    ("max_core", _PLATFORM_MAPPINGS.keys()),
    ("mojo_compiler", _PLATFORM_MAPPINGS.keys()),
    ("mblack", [""]),
]

[
    [
        http_file(
            name = name + "_" + platform + "_wheel",
            downloaded_file_path = "{}-{}-py3-none-{}.whl".format(
                name,
                PACKAGE_VERSION,
                _PLATFORM_MAPPINGS[platform],
            ),
            url = "{}/{}-{}-py3-none-{}.whl".format(
                BASE_URL,
                name,
                PACKAGE_VERSION,
                _PLATFORM_MAPPINGS[platform],
            ),
        )
        for platform in platforms
    ]
    for name, platforms in _WHEELS
]

_WHEELS2 = [
    ("max", _PLATFORM_MAPPINGS.keys()),
    ("max_core", _PLATFORM_MAPPINGS.keys()),
    ("mojo_compiler", _PLATFORM_MAPPINGS.keys()),
    #("mblack", [""]),
]

[
    http_archive(
        name = "max_core_" + platform + "_wheel22",
        url = "{}/max-{}-py3-none-{}.whl".format(
            BASE_URL,
            PACKAGE_VERSION,
            _PLATFORM_MAPPINGS[platform],
        ),
        strip_prefix = "max-{}.data/platlib".format(PACKAGE_VERSION),
        build_file_content = """
py_library(
    name = "_core",
    data = glob(["max/*.so"]),
    imports = ["."],
    visibility = ["//visibility:public"],
)
""",
    )
    for platform in _PLATFORM_MAPPINGS.keys()
]

[
    [
        http_archive(
            name = name + "_" + platform + "_wheel2",
            url = "{}/{}-{}-py3-none-{}.whl".format(
                BASE_URL,
                name,
                PACKAGE_VERSION,
                _PLATFORM_MAPPINGS[platform],
            ),
            build_file_content = """
cc_library(
    name = "lib",
    srcs = glob(["**/*.so"]),
)
""",
        )
        for platform in platforms
    ]
    for name, platforms in _WHEELS2
]
