[package]
name = "max-serve-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "sync"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
pyo3 = { version = "0.21", features = ["auto-initialize"] }
zeromq = "0.4"
rmp-serde = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
thiserror = "1.0"
rustc-hash = "2.1"
