load("//bazel:api.bzl", "modular_py_binary", "modular_py_library", "requirement")

package(default_visibility = ["//visibility:private"])

modular_py_library(
    name = "profiler",
    srcs = ["profiler.py"],
)

modular_py_binary(
    name = "simple_offline_generation",
    srcs = ["simple_offline_generation.py"],
    tags = ["no-pydeps"],  # TODO: Fix and re-enable
    deps = [
        ":profiler",
        "//max/python/max/interfaces",
        "//max/python/max/pipelines",
        "//max/python/max/pipelines/core",
        "//max/python/max/pipelines/lib",
        requirement("numpy"),
        requirement("pillow"),
        requirement("sentencepiece"),
        requirement("torch"),  # for test
    ],
)
