load("//bazel:api.bzl", "modular_py_binary", "modular_py_library", "modular_py_test", "pkg_files", "requirement")

package(default_visibility = ["//max:consumers"])

modular_py_binary(
    name = "kbench",
    srcs = [
        "__init__.py",
        "kbench.py",
        "kbench_model.py",
        "terminal_viz.py",
        "utils.py",
    ],
    data = [
        "@nvshmem_prebuilt//:device",
        "@nvshmem_prebuilt//:host",
    ],
    env = {
        "KERNEL_BENCHMARKS_ROOT": "$$BUILD_WORKSPACE_DIRECTORY/" + package_name() + "/..",
        "BITCODE_LIBS_PATH": "$(rootpath @nvshmem_prebuilt//:device)",
        "MODULAR_SHMEM_LIB_DIR": "../+http_archive+nvshmem_prebuilt",
    },
    ignore_extra_deps = [
        # Optional deps of pandas
        requirement("tabulate"),
        requirement("scipy"),
    ],
    imports = ["."],
    main = "kbench.py",
    mojo_deps = [
        "//max:_cublas",
        "//max:_cudnn",
        "//max:_cufft",
        "//max:_curand",
        "//max:_rocblas",
        "//max:comm",
        "//max:internal_utils",
        "//max:kv_cache",
        "//max:layout",
        "//max:linalg",
        "//max:nn",
        "//max:quantization",
        "//max:register",
        "//max:shmem",
        "@mojo//:std",
    ],
    deps = [
        requirement("click"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("pyyaml"),
        requirement("rich"),
        requirement("scipy"),
        requirement("tabulate"),
    ],
)

modular_py_binary(
    name = "kprofile",
    srcs = [
        "kprofile.py",
    ],
    imports = ["."],
    main = "kprofile.py",
    mojo_deps = [
        "//max:internal_utils",
        "//max:kv_cache",
        "//max:layout",
        "//max:linalg",
        "//max:nn",
        "//max:quantization",
        "//max:register",
        "@mojo//:std",
    ],
    deps = [
        ":kbench",
        requirement("click"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("plotly"),
        requirement("pyyaml"),
        requirement("rich"),
    ],
)

modular_py_binary(
    name = "kplot",
    srcs = [
        "kplot.py",
    ],
    ignore_extra_deps = [
        # Optional dep of plotly
        requirement("kaleido"),
    ],
    imports = ["."],
    main = "kplot.py",
    mojo_deps = [
        "//max:internal_utils",
        "//max:kv_cache",
        "//max:layout",
        "//max:linalg",
        "//max:nn",
        "//max:quantization",
        "//max:register",
        "@mojo//:std",
    ],
    deps = [
        ":kprofile",
        requirement("click"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("plotly"),
        requirement("kaleido"),
    ],
)

modular_py_binary(
    name = "kdiff",
    srcs = [
        "kdiff.py",
    ],
    imports = ["."],
    main = "kdiff.py",
    deps = [
        requirement("click"),
        requirement("pyyaml"),
    ],
)

modular_py_library(
    name = "bencher_utils",
    srcs = [
        "bencher_utils.py",
    ],
    imports = ["."],
)

modular_py_test(
    name = "autotune_tests",
    srcs = glob(["tests/*.py"]),
    data = glob(["tests/*.csv"]) + [
        "sample.mojo",
        "sample.py",
        "test.yaml",
        "test_python.yaml",
    ],
    env = {"KERNEL_BENCHMARKS_ROOT": "max/kernels/benchmarks/"},
    mojo_deps = [
        "//max:internal_utils",
        "//max:kv_cache",
        "//max:layout",
        "//max:linalg",
        "//max:nn",
        "//max:quantization",
        "//max:register",
        "@mojo//:std",
    ],
    target_compatible_with = select({
        # FIXME
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":kbench",
        ":kplot",
        ":kprofile",
        "//max/kernels/benchmarks/autotune:bencher_utils",
        requirement("click"),
        requirement("numpy"),
        requirement("pandas"),
        requirement("rich"),
    ],
)

# TODO: this probably can be removed safely.
pkg_files(
    name = "autotune_files",
    srcs = [
        "kbench.py",
        "kplot.py",
        "kprofile.py",
        "pyproject.toml",
        "utils.py",
    ],
    prefix = "kernel-benchmark/autotune",
)
