load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//max:consumers"])

mojo_library(
    name = "nvml",
    srcs = glob(["**/*.mojo"]),
    docs_base_path = "kernels",
    use_production_compiler_for_asan = True,
    validate_missing_docs = False,
    deps = [
        "@mojo//:std",
    ],
)
