load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//max:consumers"])

mojo_library(
    name = "state_space",
    srcs = glob(
        ["*.mojo"],
        exclude = ["*_test.mojo"],
    ),
    use_production_compiler_for_asan = True,
    validate_missing_docs = False,
    deps = [
        "//max:extensibility",
        "//max:layout",
        "//max:nn",
        "@mojo//:std",
    ],
)
