load("//bazel:api.bzl", "mojo_test")

package(default_visibility = ["//max:consumers"])

# End-to-end test for the Mojo `Range` context manager. Lives under //max
# (alongside the implementation) rather than //KGEN/test so that KGEN stays
# buildable and testable without the MAX/Kernels trees. The lower-level
# KGEN_CompilerRT_Range* FFI symbols keep their own coverage in
# //KGEN/test/profiling:test_range_bridge.mojo.test.
mojo_test(
    name = "test_range_struct.mojo.test",
    srcs = ["test_range_struct.mojo"],
    deps = [
        "//max:profiling_range",
        "@mojo//:std",
    ],
)
