load("//bazel:api.bzl", "modular_py_test")

package(default_visibility = [
    "//:__pkg__",
    "//SDK/integration-test:__subpackages__",
    "//max/tests:__subpackages__",
    "//oss/modular/max/tests:__subpackages__",
])

# MambaKernelAPI contains selective_scan kernels that need to be available for tests
# MambaKernelAPI is separate from MOGGKernelAPI to avoid conflicts with default kernels
MAMBA_MOJOPKGS = [
    "//max/kernels/src/Mogg/MambaKernelAPI:MambaKernelAPI",
]

modular_py_test(
    name = "nn",
    srcs = glob(["*.py"]),
    mojo_deps = select({
        "//:emit_mojo_enabled": ["//max:MOGGKernelAPI"] + MAMBA_MOJOPKGS,
        "//conditions:default": MAMBA_MOJOPKGS,
    }),
    tags = ["no-pydeps"],  # TODO: Fix and re-enable
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        "//max/python/max/mlir",
        "//max/python/max/nn",
    ],
)
