load("//bazel:api.bzl", "modular_py_test", "requirement")

package(default_visibility = [
    "//:__pkg__",
    "//SDK/integration-test:__subpackages__",
    "//max/tests:__subpackages__",
    "//oss/modular/max/tests:__subpackages__",
])

# state_space contains selective_scan kernels that need to be available for tests
MAMBA_MOJOPKGS = [
    "//max/kernels/src/state_space:state_space",
]

modular_py_test(
    name = "nn",
    timeout = "long",
    srcs = glob(["*.py"]),
    mojo_deps = ["//max:MOGGKernelAPI"] + MAMBA_MOJOPKGS,
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        "//max/python/max/mlir",
        "//max/python/max/nn",
        "//max/python/max/pipelines/architectures",
        requirement("numpy"),
    ],
)
