load("//bazel:api.bzl", "modular_py_test", "requirement")

package(default_visibility = [
    "//:__pkg__",
    "//SDK/integration-test:__subpackages__",
    "//max/tests:__subpackages__",
    "//oss/modular/max/tests:__subpackages__",
])

# FIXME(KERN-2604): topk kernel uses external_memory unsupported on Apple GPU
_MACOS_INCOMPATIBLE_TESTS = [
    "test_sampling_gpu.py",
]

# CPU-only local suites should not pull in the dedicated GPU test target.
_CPU_TEST_SRCS = glob(
    ["test_*.py"],
    exclude = ["*_gpu.py"],
)

# Tests that need a longer timeout on remote GPU CI.
_LONG_TIMEOUT_TESTS = [
    "test_gemma4_decoder_layer_per_expert_scale_gpu.py",
    "test_gemma4_decoder_layer_rms_norm_gpu.py",
    "test_sampling_gpu.py",
    "test_gemma4_moe_expected_count_gpu.py",
    "test_gemma4_moe_indices_gpu.py",
    "test_gemma4_moe_reorder_gpu.py",
    "test_gemma4_sampling_gpu.py",
    "test_gemma4_router_topk_gpu.py",
    "test_gemma4_router_per_expert_scale_gpu.py",
    "test_gemma4_router_experts_per_expert_scale_gpu.py",
    "test_gemma4_router_select_gpu.py",
    "test_gemma4_moe_grouped_matmul_stats_gpu.py",
    "test_gemma4_moe_combine_gpu.py",
    "test_gemma4_moe_module_gpu.py",
    "test_gemma4_moe_module_expected_count_gpu.py",
    "test_gemma4_moe_gateup_batched_matmul_gpu.py",
]

_ARCHITECTURE_TESTS = [
    "test_gemma4_decoder_layer_per_expert_scale_gpu.py",
    "test_gemma4_decoder_layer_rms_norm_gpu.py",
    "test_gemma4_moe_combine.py",
    "test_gemma4_moe_module_gpu.py",
    "test_gemma4_moe_module_expected_count_gpu.py",
    "test_gemma4_rms_norm.py",
    "test_gemma4_rms_norm_gpu.py",
    "test_gemma4_router_experts_per_expert_scale_gpu.py",
]

[
    modular_py_test(
        name = src.replace(".py", ""),
        timeout = "long" if src in _LONG_TIMEOUT_TESTS else None,
        srcs = [
            "__init__.py",
            "conftest.py",
            "norm_test_utils.py",
            src,
        ],
        gpu_constraints = ["//:has_gpu"] if "_gpu.py" in src else [],
        mojo_deps = ["//max:MOGGKernelAPI"],
        tags = ["no-pydeps"] + (["skip-external-ci"] if src in [
            # FIXME: SDLC-3032
            "test_module.py",
        ] else []) + (["gpu"] if "_gpu.py" in src else []),
        target_compatible_with = select({
            "@platforms//os:macos": ["@platforms//:incompatible"],
            "//conditions:default": [],
        }) if src in _MACOS_INCOMPATIBLE_TESTS else [],
        deps = [
            "//max/python/max/driver",
            "//max/python/max/dtype",
            "//max/python/max/engine",
            "//max/python/max/graph",
            "//max/python/max/mlir",
            "//max/python/max/nn",
            requirement("numpy"),
        ] + (
            # pipelines/lib is only needed by the GPU sampling test; keep it
            # out of the default dep list so cpu_tests stays lightweight.
            ["//max/python/max/pipelines/lib"] if src == "test_sampling_gpu.py" else []
        ) + (
            ["//max/python/max/pipelines/architectures"] if src in _ARCHITECTURE_TESTS else []
        ) + (
            [requirement("torch")] if src in [
                "test_gemma4_decoder_layer_per_expert_scale_gpu.py",
                "test_gemma4_decoder_layer_rms_norm_gpu.py",
                "test_gemma4_moe_expected_count_gpu.py",
                "test_gemma4_moe_indices_gpu.py",
                "test_gemma4_moe_reorder_gpu.py",
                "test_gemma4_rms_norm_gpu.py",
                "test_gemma4_sampling_gpu.py",
                "test_gemma4_router_topk_gpu.py",
                "test_gemma4_router_per_expert_scale_gpu.py",
                "test_gemma4_router_experts_per_expert_scale_gpu.py",
                "test_gemma4_router_select_gpu.py",
                "test_gemma4_moe_grouped_matmul_stats_gpu.py",
                "test_gemma4_moe_combine_gpu.py",
                "test_gemma4_moe_module_gpu.py",
                "test_gemma4_moe_module_expected_count_gpu.py",
                "test_gemma4_moe_gateup_batched_matmul_gpu.py",
            ] else []
        ),
    )
    for src in glob(["test_*.py"])
]

test_suite(
    name = "cpu_tests",
    tests = [
        ":" + src.replace(".py", "")
        for src in _CPU_TEST_SRCS
    ],
)
