load("//bazel:api.bzl", "mojo_filecheck_test", "mojo_test")

_DATA = [
    "test_file_dummy_input_ASCII.txt",
    "UN_charter_AR.txt",
    "UN_charter_EN.txt",
    "UN_charter_ES.txt",
    "UN_charter_RU.txt",
    "UN_charter_zh-CN.txt",
]

_FILECHECK_TESTS = [
    "test_write_to_stdout.mojo",
]

[
    mojo_filecheck_test(
        name = src + ".test",
        srcs = [src],
        copts = [
            "--debug-level",
            "full",
        ],
        deps = [
            "@mojo//:stdlib",
            "@mojo//:test_utils",
        ],
    )
    for src in _FILECHECK_TESTS
]

[
    mojo_test(
        name = src + ".test",
        srcs = [src],
        copts = [
            "--debug-level",
            "full",
        ],
        data = _DATA + [src],  # NOTE: some tests attempt to read their source files
        deps = [
            "@mojo//:stdlib",
            "@mojo//:test_utils",
        ],
    )
    for src in glob(
        ["*.mojo"],
        exclude = _FILECHECK_TESTS,
    )
]
