load("//bazel:api.bzl", "mojo_filecheck_test", "mojo_test")

package(default_visibility = ["//visibility:private"])

_FILECHECK_TESTS = [
    "test_take_negative_count.mojo",
    "test_drop_negative_count.mojo",
]

_EXPECT_CRASH = [
    "test_take_negative_count.mojo",
    "test_drop_negative_count.mojo",
]

[
    mojo_filecheck_test(
        name = src + ".test",
        srcs = [src],
        copts = [
            "--debug-level",
            "full",
        ],
        expect_crash = src in _EXPECT_CRASH,
        deps = [
            "@mojo//:std",
            "@mojo//:test_utils",
        ],
    )
    for src in _FILECHECK_TESTS
]

[
    mojo_test(
        name = src + ".test",
        srcs = [src],
        copts = [
            "--debug-level",
            "full",
        ],
        deps = [
            "@mojo//:std",
            "@mojo//:test_utils",
        ],
    )
    for src in glob(
        ["*.mojo"],
        exclude = _FILECHECK_TESTS,
    )
]
