load("@rules_cc//cc/toolchains:args.bzl", "cc_args")
load("@rules_cc//cc/toolchains:feature.bzl", "cc_feature")
load("@rules_cc//cc/toolchains:nested_args.bzl", "cc_nested_args")

cc_feature(
    name = "dynamic_library_linker_tool_no_op",  # Make sure legacy toolchain feature isn't added
    overrides = "@rules_cc//cc/toolchains/features/legacy:dynamic_library_linker_tool",
    visibility = ["//visibility:public"],
)

cc_feature(
    name = "build_interface_libraries_no_op",  # Make sure legacy toolchain feature isn't added
    overrides = "@rules_cc//cc/toolchains/features/legacy:build_interface_libraries",
    visibility = ["//visibility:public"],
)

cc_feature(
    name = "supports_interface_shared_libraries",
    feature_name = "supports_interface_shared_libraries",
    visibility = ["//visibility:public"],
)

cc_args(
    name = "build_interface_libraries",
    actions = ["@rules_cc//cc/toolchains/actions:dynamic_library_link_actions"],
    env = select({
        "@platforms//os:macos": {"MACOS": "true"},
        "//conditions:default": {},
    }),
    nested = [
        ":generate_interface_library_arg",
        ":interface_library_builder_path_arg",
        ":interface_library_input_path_arg",
        ":interface_library_output_path_arg",
    ],
    requires_any_of = [":supports_interface_shared_libraries"],
    requires_not_none = "@rules_cc//cc/toolchains/variables:generate_interface_library",
    visibility = ["//visibility:public"],
)

cc_nested_args(
    name = "generate_interface_library_arg",
    args = ["{generate_interface_library}"],
    format = {"generate_interface_library": "@rules_cc//cc/toolchains/variables:generate_interface_library"},
)

cc_nested_args(
    name = "interface_library_builder_path_arg",
    args = ["bazel/internal/cc-toolchain/args/interface-libraries/builder.sh"],  # NOTE: This should be fixed upstream by allowing passing a custom binary path
    data = [
        ":builder.sh",
        "@llvm-ifs",
    ],
)

cc_nested_args(
    name = "interface_library_input_path_arg",
    args = ["{interface_library_input_path}"],
    format = {"interface_library_input_path": "@rules_cc//cc/toolchains/variables:interface_library_input_path"},
    requires_not_none = "@rules_cc//cc/toolchains/variables:interface_library_input_path",
)

cc_nested_args(
    name = "interface_library_output_path_arg",
    args = ["{interface_library_output_path}"],
    format = {"interface_library_output_path": "@rules_cc//cc/toolchains/variables:interface_library_output_path"},
    requires_not_none = "@rules_cc//cc/toolchains/variables:interface_library_output_path",
)

cc_args(
    name = "dynamic_library_linker_tool",
    actions = ["@rules_cc//cc/toolchains/actions:dynamic_library_link_actions"],
    args = ["bazel/internal/cc-toolchain/tools/linker-driver.sh"],  # NOTE: This should be fixed upstream by allowing passing a custom binary path
    requires_any_of = [":supports_interface_shared_libraries"],
    requires_not_none = "@rules_cc//cc/toolchains/variables:generate_interface_library",
    visibility = ["//visibility:public"],
)
