load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//max:consumers"])

mojo_library(
    name = "builtin_kernels",
    srcs = glob(["**/*.mojo"]),
    docs_base_path = "kernels",
    use_production_compiler_for_asan = True,
    validate_missing_docs = False,
    deps = [
        "//Kernels/lib/msa",
        "//max:builtin_primitives",
        "//max:comm",
        "//max:extensibility",
        "//max:kv_cache",
        "//max:layout",
        "//max:linalg",
        "//max:nn",
        "//max:quantization",
        "//max:shmem",
        "//max:state_space",
        "@mojo//:std",
    ],
)
