load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//max:consumers"])

exports_files(["__init__.mojo"])

mojo_library(
    name = "extensibility",
    srcs = glob(["**/*.mojo"]),
    docs_base_path = "kernels",
    use_production_compiler_for_asan = True,
    validate_missing_docs = False,
    deps = [
        "//max:layout",
        "@mojo//:std",
    ],
)
