load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//max:consumers"])

mojo_library(
    name = "ops",
    srcs = glob(["**/*.mojo"]),
    docs_base_path = "kernels",
    validate_missing_docs = False,
    deps = [
        "//max:compiler_internal",
        "//max:tensor",
        "//max/kernels/src/state_space/nn",
        "@mojo//:std",
    ],
)
